--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: bash
 services: docker
 
 env:
-  - ANDROID_COMPILE_SDK=24 ANDROID_BUILD_TOOLS_VERSION=25.0.2
+  - ANDROID_SDK=24 ANDROID_BUILD_TOOLS=25.0.2
+  - ANDROID_SDK=25 ANDROID_BUILD_TOOLS=25.0.2
 
 install:
   - git clone https://github.com/docker-library/official-images.git ~/official-images
@@ -12,7 +13,7 @@ before_script:
   - image="android:sdk-${ANDROID_COMPILE_SDK}_build-tools-${ANDROID_BUILD_TOOLS_VERSION}"
 
 script:
-  - travis_retry docker build -t "$image" .
+  - travis_retry docker build -t "$image" --build-arg ANDROID_COMPILE_SDK=$ANDROID_SDK --build-arg ANDROID_BUILD_TOOLS_VERSION=$ANDROID_BUILD_TOOLS .
   - ~/official-images/test/run.sh "$image"
 
 after_script:
