--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 
 before_script:
   - env | sort
-  - image="android:sdk-${ANDROID_COMPILE_SDK}_build-tools-${ANDROID_BUILD_TOOLS_VERSION}"
+  - image="donovanfournier/android:sdk-${ANDROID_COMPILE_SDK}_build-tools-${ANDROID_BUILD_TOOLS_VERSION}"
 
 script:
   - travis_retry docker build -t "$image" --build-arg ANDROID_COMPILE_SDK=$ANDROID_SDK --build-arg ANDROID_BUILD_TOOLS_VERSION=$ANDROID_BUILD_TOOLS .
