--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,22 @@ language: bash
 services: docker
 
 env:
-  - ANDROID_SDK=24 ANDROID_BUILD_TOOLS=25.0.2
+  - ANDROID_SDK=24 ANDROID_BUILD_TOOLS=25.0.2 VARIANT=alpine
   - ANDROID_SDK=25 ANDROID_BUILD_TOOLS=25.0.2
 
 install:
   - git clone https://github.com/docker-library/official-images.git ~/official-images
 
 before_script:
-  - image="donovanfournier/android:sdk-${ANDROID_SDK}_build-tools-${ANDROID_BUILD_TOOLS}"
+  - image="donovanfournier/android:sdk-${ANDROID_SDK}_build-tools-${ANDROID_BUILD_TOOLS}${VARIANT:+-$VARIANT}"
 
 script:
+  - cd "./${VARIANT}"
   - travis_retry docker build -t "$image" --build-arg ANDROID_COMPILE_SDK=$ANDROID_SDK --build-arg ANDROID_BUILD_TOOLS_VERSION=$ANDROID_BUILD_TOOLS .
   - ~/official-images/test/run.sh "$image"
 
 after_script:
   - docker images
+  - docker history "$image"
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
   - docker push "$image";
