--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,12 @@ language: bash
 services: docker
 
 env:
-  - ANDROID_SDK=24 ANDROID_BUILD_TOOLS=25.0.2 VARIANT=alpine
   - ANDROID_SDK=24 ANDROID_BUILD_TOOLS=25.0.2 LATEST=true
-  - ANDROID_SDK=25 ANDROID_BUILD_TOOLS=25.0.2 VARIANT=alpine
+  - ANDROID_SDK=24 ANDROID_BUILD_TOOLS=25.0.2 VARIANT=alpine
+  - ANDROID_SDK=24 ANDROID_BUILD_TOOLS=25.0.2 VARIANT=emulator
   - ANDROID_SDK=25 ANDROID_BUILD_TOOLS=25.0.2
+  - ANDROID_SDK=25 ANDROID_BUILD_TOOLS=25.0.2 VARIANT=alpine
+  - ANDROID_SDK=25 ANDROID_BUILD_TOOLS=25.0.2 VARIANT=emulator
 
 install:
   - git clone https://github.com/docker-library/official-images.git ~/official-images
