--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: bash
 services: docker
 
 env:
-  - ANDROID_SDK=25 ANDROID_BUILD_TOOLS=25.0.3 LATEST=true
+  - ANDROID_SDK=26 ANDROID_BUILD_TOOLS=26.0.1 LATEST=true
+  - ANDROID_SDK=26 ANDROID_BUILD_TOOLS=26.0.1 VARIANT=alpine
+  - ANDROID_SDK=25 ANDROID_BUILD_TOOLS=25.0.3
   - ANDROID_SDK=25 ANDROID_BUILD_TOOLS=25.0.3 VARIANT=alpine
   - ANDROID_SDK=24 ANDROID_BUILD_TOOLS=25.0.3
   - ANDROID_SDK=24 ANDROID_BUILD_TOOLS=25.0.3 VARIANT=alpine
